samples/_failures_safe/1761480318_c6a706_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4918e8ad.c: In function ‘main’:
./samples/SAFE/__tmp_4918e8ad.c:150:5: error: expected declaration or statement at end of input
  150 |     if (len > 0 && input_text[len - 1] == '\n') {
      |     ^~
./samples/SAFE/__tmp_4918e8ad.c:150:5: error: expected declaration or statement at end of input
